出品ページ遷移ボタン作成

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -20,3 +20,12 @@
     <% end %>
   </div>
 </div>
+<div class="wrapper">
+  <div class="main-content">
+    <div class="new-item-btn">
+      <%= link_to new_item_path do %>
+        <span>出品する</span>
+      <% end %>
+    </div>
+  </div>
+</div>
