--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,48 @@
-<div>新規登録</div>
+<div class="wrapper">
+  
+  <div class="registration-container">
+    <%= link_to (image_tag src="logo.jpg", class: "logo-image" ),root_path %>
+    <div class="form-title">会員情報入力</div>
 
-<%= form_with model:@user, url: user_registration_path, local: true do |f| %>
-<div class="form-wrap">
-  <div class="form-text">
-    <label>名前</label>
+    <%= form_with model:@user, url: user_registration_path, local: true, class: "user-form" do |f| %>
+      <div class="form-wrap">
+        <div class="form-text">
+          <label>名前</label><span class="required">必須</span>
+        </div>
+        <%= f.text_field :name, class: "form", placeholder: "例）山田 太郎"%>
+      </div>
+
+      <div class="form-wrap">
+        <div class="form-text">
+          <label>Eメール</label><span class="required">必須</span>
+        </div>
+        <%= f.text_field :email, class: "form", placeholder: "PC・携帯どちらでも可" %>
+      </div>
+
+      <div class="form-wrap">
+        <div class="form-text">
+          <label>パスワード</label><span class="required">必須</span>
+        </div>
+        <%= f.text_field :password, class: "form", placeholder: "８文字以上の半角英数混合", type: "password" %>
+      </div>
+
+      <div class="form-wrap">
+        <div class="form-text">
+          <label>パスワード（確認用）</label><span class="required">必須</span>
+        </div>
+        <%= f.text_field :password_confirmation, class: "form", placeholder: "パスワードを再入力してください", type: "password" %>
+      </div>
+
+      <div class="form-wrap">
+        <div class="form-text">
+          <label>会社名</label>
+        </div>
+        <%= f.text_field :company_name, class: "form", placeholder: "※個人での利用の方は省略可" %>
+      </div>
+
+      <div class="form_submit">
+        <%= f.submit "新規登録", class: "form form-btn"%>
+      </div>
+    <% end%>
   </div>
-  <%= f.text_field :name %>
 </div>
-
-<div class="form-wrap">
-  <div class="form-text">
-    <label>Eメール</label>
-  </div>
-  <%= f.text_field :email %>
-</div>
-
-<div class="form-wrap">
-  <div class="form-text">
-    <label>パスワード</label>
-  </div>
-  <%= f.text_field :password %>
-</div>
-
-<div class="form-wrap">
-  <div class="form-text">
-    <label>パスワード（確認用）</label>
-  </div>
-  <%= f.text_field :password_confirmation %>
-</div>
-
-<div class="form-wrap">
-  <div class="form-text">
-    <label>会社名</label>
-  </div>
-  <%= f.text_field :company_name %>
-</div>
-
-<div class="form_submit">
-  <%= f.submit "新規登録"%>
-</div>
-
-<% end%>
