クラス名修正

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
   
-  <div class="registration-container">
+  <div class="user-container">
     <%= link_to (image_tag src="logo.jpg", class: "logo-image" ),root_path %>
     <div class="form-title">会員情報入力</div>
 
