--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -41,4 +41,32 @@
   display: flex;
   align-items: center;
 }
+.btn-field{
+  width: 90%;
+  text-align: center;
+  margin: auto;
+}
+.item-btn{
+  margin: auto;
+  height: 50px;
+  width: 400px;
+  border: 1px gray solid;
+  box-shadow: 3px 3px 3px gray;
+  border-radius: 3px;
+  margin-top: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.item-btn a{
+  color: white;
+  font-size:20px;
+  background-color: limegreen;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
 
