--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -66,6 +66,10 @@
       <div class="item-btn">
         <%= link_to "編集",  edit_item_path(@item), class: "edit-btn" %>
       </div>
+      <span class="or">or</span>
+      <div class="item-btn">
+        <%= link_to "削除", item_path(@item), method: :delete, class: "delete-btn" %>
+      </div>
       <% end %>
     </div>
 
