--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -45,6 +45,7 @@
   width: 90%;
   text-align: center;
   margin: auto;
+  padding-top: 30px;
 }
 .item-btn{
   margin: auto;
@@ -53,7 +54,7 @@
   border: 1px gray solid;
   box-shadow: 3px 3px 3px gray;
   border-radius: 3px;
-  margin-top: 60px;
+  margin-top: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -61,12 +62,21 @@
 .item-btn a{
   color: white;
   font-size:20px;
-  background-color: limegreen;
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-  
+  justify-content: center; 
 }
-
+.or{
+  display: inline-block;
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+.edit-btn{
+  background-color: limegreen;
+}
+.delete-btn {
+  background-color: red;
+}
