--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -4,6 +4,12 @@
 .user-name {
   font-size: 40px;
 }
+.name-field{
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 .info-fields {
   width: 80%;
   margin: auto;
@@ -21,14 +27,17 @@
   text-align: right;
   border-bottom: 1px #c3c3c3 solid;
 }
-.edit-btn{
+.mypage-edit-btn{
   background-color: #efefef;
   width: 50px;
   border: 1px black solid;
   border-radius: 3px;
   text-align: center;
+  height: 30px;
+  
 }
 
-.edit-btn a {
+.mypage-edit-btn a {
   color:black;
-  
+}
+
