--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -41,7 +41,7 @@
         <%= f.text_field :company_name, class: "form", placeholder: "※個人での利用の方は省略可" %>
       </div>
 
-      <div class="form_submit">
+      <div class="form-submit">
         <%= f.submit "新規登録", class: "form form-btn"%>
       </div>
     <% end%>
