--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -75,7 +75,7 @@
   margin-top: 20px;
 }
 .edit-btn{
-  background-color: limegreen;
+  background-color: #7f7e7d;
 }
 .delete-btn {
   background-color: red;
