--- a/app/assets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/user/show.css
@@ -1,31 +1,62 @@
-.user-info {
+/* aタグ共有 */
+a {
+  text-decoration: none;
+}
+/* ヘッダー共有ブロック */
+.header {
+  position: fixed;
+  top: 0px;
+  width: 100vw;
+  border-bottom: 1px rgba(0, 0, 0, 0.253) solid;
+  background-color:#ffffff;
+}
+/* 背景 */
+.wrapper{
+  height: 100vh;
+  padding-top: 90px;
+  background-color: #fffafafa;
+  overflow: hidden;
+  overflow: scroll;
+}
+
+.user-show-form-container {
+  background-color: white;
+  width: 600px;
+  box-shadow: 3px 3px 3px gray;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 50px 10px 50px 10px; 
+}
+.user-show-info-field {
   margin:30px;
 }
-.user-name {
+.user-show-name {
   font-size: 40px;
 }
-.name-field{
+.user-show-name-field{
   width: 80%;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-.info-fields {
+.user-show-info-fields {
   width: 80%;
   margin: auto;
 }
-.info-field {
+.user-show-info-field {
   margin-top: 30px;
   justify-content: space-between;
 }
-.info-title {
+.user-show-info-title {
   font-size: 20px;
 }
-.info {
+.user-show-info {
   margin-top: 40px;
+  width: 100%;
   text-align: right;
 }
-.mypage-edit-btn{
+.mypage-show-btn{
   background-color: #efefef;
   width: 50px;
   border: 1px black solid;
@@ -35,7 +66,18 @@
   
 }
 
-.mypage-edit-btn a {
+.mypage-show-btn a {
   color:black;
 }
-
+.user-show-regist-btn {
+  background-color: #efefef;
+  padding: 4px;
+  border: 1px black solid;
+  border-radius: 3px;
+  text-align: center;
+  color:black;
+  margin-left: 5px;
+}
+.user-show-regist-btn a {
+  width: 80px;
+}
