--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,47 +3,43 @@
 </div>
 
 <div class="wrapper">
-  <div class="form-container">
-    <div class="user-info">
+  <div class="user-show-form-container">
+    <div class="user-show-info-field">
 
-      <%# <div class="title-field">
-        <h2 class="form-title">ユーザー情報</h2>
-      </div> %>
-
-      <div class="name-field">
-        <div class="user-name">
+      <div class="user-show-name-field">
+        <div class="user-show-name">
           <%= @user.name %>
         </div>
-        <div class="mypage-edit-btn">
+        <div class="mypage-show-btn">
         <%= link_to "編集",  edit_user_path(current_user)%>
         </div>
       </div>
-      <div class="info-fields">
+      <div class="user-show-info-fields">
         <%= form_with  url: edit_user_path(current_user), local: true do |f| %>
-          <div class="info-field">
-            <div class="info-title">
+          <div class="user-show-info-field">
+            <div class="user-show-info-title">
               Eメール
             </div>
-            <div class="info">
+            <div class="user-show-info">
               <%= @user.email %>
             </div>
           </div>
 
           
-          <div class="info-field">
-            <div class="info-title">
+          <div class="user-show-info-field">
+            <div class="user-show-info-title">
               会社名
             </div>
-            <div class="info">
+            <div class="user-show-info">
               <%= @user.company_name%>
             </div>
           </div>
 
-          <div class="info-field">
-            <div class="info-title">
+          <div class="user-show-info-field">
+            <div class="user-show-info-title">
               住所
             </div>
-            <div class="info">
+            <div class="user-show-info">
               <% if current_user.address %>
               <%= current_user.address.postal_code%>
               <%= current_user.address.prefecture.name%>
@@ -53,7 +49,7 @@
               <%= current_user.address.phone_number%>
             <% else %>
               未登録
-              <%= link_to "登録" , new_user_address_path(current_user),method: :get, local: true, class: "regist-btn" %>
+              <%= link_to "登録" , new_user_address_path(current_user),method: :get, local: true, class: "user-show-regist-btn" %>
             <% end %>
             </div>
           </div>
